# greetings

./: LICENSE  LICENSE-THIRD-PARTY  README.md  greetings.def.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: main.py  setup.py
src/greetings/: main.py  setup.py
